--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ p {
   background-color: var(--independence);
 }
 
-.nav_item_active {
+.mobile_menu__nav_item_active {
   background-color: var(--independence);
 }
 
